--- a/Sass/modules.scss
+++ b/Sass/modules.scss
@@ -78,6 +78,9 @@ body {
           h3 {
             font-size: 2rem;
           }
+          p {
+            font-size: 1rem;
+          }
           ul {
             color: #7b7b7b;
             padding-left: 30px;
